...
                Row(
                    verticalAlignment = Alignment.CenterVertically
                ) {
                    item.avatarSrc?.let {
                        AsyncImage(
                            model = it,
                            contentDescription = "Avatar",
                            modifier = Modifier.clip(CircleShape)
                                .size(36.dp)
                        )
                        Spacer(Modifier.width(8.dp))
                    }

...
